Fin de la sección 14

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,8 +10,10 @@
     <div class="card-body">
       <form
         class="form-horizontal form-material"
+        autocomplete="off"
+        [formGroup]="loginForm"
         id="loginform"
-        (submit)="login()"
+        (ngSubmit)="login()"
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
@@ -22,9 +24,9 @@
           <div class="col-xs-12">
             <input
               class="form-control"
-              type="text"
-              required=""
-              placeholder="Username"
+              type="email"
+              formControlName="email"
+              placeholder="Email"
             />
           </div>
         </div>
@@ -33,7 +35,7 @@
             <input
               class="form-control"
               type="password"
-              required=""
+              formControlName="password"
               placeholder="Password"
             />
           </div>
@@ -43,6 +45,7 @@
             <div class="checkbox checkbox-primary pull-left p-t-0">
               <input
                 id="checkbox-signup"
+                formControlName="remember"
                 type="checkbox"
                 class="filled-in chk-col-light-blue"
               />
@@ -67,31 +70,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
-            <div class="social">
-              <a
-                href="javascript:void(0)"
-                class="btn btn-facebook"
-                data-toggle="tooltip"
-                title="Login with Facebook"
-              >
-                <i aria-hidden="true" class="fa fa-facebook"></i>
-              </a>
-              <a
-                href="javascript:void(0)"
-                class="btn btn-googleplus"
-                data-toggle="tooltip"
-                title="Login with Google"
-              >
-                <i aria-hidden="true" class="fa fa-google-plus"></i>
-              </a>
-            </div>
+          <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center" id="google-btn">
+            <div id="my-signin2"></div>
           </div>
         </div>
         <div class="form-group m-b-0">
           <div class="col-sm-12 text-center">
             Don't have an account?
-            <a href="pages-register2.html" class="text-primary m-l-5"
+            <a routerLink="/register" class="text-primary m-l-5"
               ><b>Sign Up</b></a
             >
           </div>
