--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -11,7 +11,9 @@
       <form
         class="form-horizontal form-material"
         id="loginform"
-        action="index.html"
+        autocomplete="off"
+        [formGroup]="registerForm"
+        (ngSubmit)="createUser()"
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
@@ -25,7 +27,7 @@
             <input
               class="form-control"
               type="text"
-              required=""
+              formControlName="username"
               placeholder="Name"
             />
           </div>
@@ -35,7 +37,7 @@
             <input
               class="form-control"
               type="text"
-              required=""
+              formControlName="email"
               placeholder="Email"
             />
           </div>
@@ -45,7 +47,7 @@
             <input
               class="form-control"
               type="password"
-              required=""
+              formControlName="password"
               placeholder="Password"
             />
           </div>
@@ -55,7 +57,7 @@
             <input
               class="form-control"
               type="password"
-              required=""
+              formControlName="password2"
               placeholder="Confirm Password"
             />
           </div>
@@ -63,13 +65,30 @@
         <div class="form-group row">
           <div class="col-md-12">
             <div class="checkbox checkbox-primary p-t-0">
-              <input id="checkbox-signup" type="checkbox" />
+              <input
+                formControlName="terms"
+                id="checkbox-signup"
+                type="checkbox" />
               <label for="checkbox-signup">
                 I agree to all <a href="#">Terms</a></label
               >
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col text-danger">
+
+            <p *ngIf="invalidField('username')">El nombre es obligatorio.</p>
+            <p *ngIf="invalidField('email')">El email es obligatorio y debe ser válido.</p>
+            <p *ngIf="checkPasswords()">Las contraseñas deben ser iguales.</p>
+            <p *ngIf="checkUseTerms()">Debe aceptar los términos de uso.</p>
+
+          </div>
+        </div>
+
+
+
         <div class="form-group text-center m-t-20">
           <div class="col-xs-12">
             <button
@@ -88,7 +107,7 @@
           <div class="col-sm-12 text-center">
             <p>
               Already have an account?
-              <a href="pages-login-2.html" class="text-info m-l-5"
+              <a routerLink="/login" class="text-info m-l-5"
                 ><b>Sign In</b></a
               >
             </p>
