--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+.w100 {
+  width: 100px;
+}
+
+.w140 {
+  width: 140px;
+}
+
+.avatar {
+  width: 35px;
+  border: radius 100%;
+}
+
+.img-avatar {
+  width: 200px;
+  height: 200px;
+  padding: 15px;
+}
