--- a/src/app/components/modal-images/modal-images.component.html
+++ b/src/app/components/modal-images/modal-images.component.html
@@ -37,7 +37,7 @@
           <button type="button" (click)="closeModal()" class="btn btn-default" data-dismiss="modal">
             Cancel
           </button>
-          <button type="button" (click)="fileUploader()" class="btn btn-defaultprimary">Load image</button>
+          <button type="button" (click)="fileUploader()" class="btn btn-defaultprimary">Upload image</button>
         </div>
       </div>
     </div>
