--- a/src/app/pages/maintenance/users/users.component.html
+++ b/src/app/pages/maintenance/users/users.component.html
@@ -5,7 +5,7 @@
         <input
           type="text"
           class="form-control"
-          placeholder="Find user..."
+          placeholder="Find a user..."
           #txtTerm
           (keyup)="find(txtTerm.value)"
         />
