--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@
   width: 140px;
 }
 
+.w200 {
+  width: 200px;
+}
+
 .avatar {
   width: 35px;
   border: radius 100%;
@@ -16,4 +20,8 @@
   width: 200px;
   height: 200px;
   padding: 15px;
+}
+
+.cursor {
+  cursor: pointer;
 }
