--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,7 +13,7 @@
         autocomplete="off"
         [formGroup]="loginForm"
         id="loginform"
-        (ngSubmit)="login()"
+        (submit)="login()"
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
