--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.w65 {
+  width: 65px;
+}
+
 .w100 {
   width: 100px;
 }
